# goit-algo2-hw-06

./: pyproject.toml
Task1/: bloom_filter.py  main.py
Task2/: README.md  main.py
Task2/putLogHere/: gitignore
