[project]
name = "goit-algo2-hw-06"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Klokta",email = "roman.klokta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mmh3 (>=5.2.0,<6.0.0)",
    "datasketch (>=1.6.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"

